Fix for bullet points on mobile, bandeau content page

--- a/front/style/_content.scss
+++ b/front/style/_content.scss
@@ -504,6 +504,11 @@
     ul.dots,
     ul {
         padding-left: 55px;
+
+        @media (max-width: $mobile) {
+            max-width: 100%;
+            box-sizing: border-box;
+        }
     }
 }
 
